--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,9 +23,9 @@ a {
 
 .top-wrapper {
   padding: 180px 0 100px 0;
-  background-image: url (https://github.com/Lee-Jihyuwe/Hina.github.io/blob/main/159Z_2107.w026.n002.628B.p1.628.jpg);
+  background-image: url(https://github.com/Lee-Jihyuwe/Hina.github.io/blob/main/159Z_2107.w026.n002.628B.p1.628.jpg);
   background-size: cover;
-  color: white;
+  color: none;
   text-align: center;
 }
 
