--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,7 +25,7 @@ a {
   padding: 180px 0 100px 0;
   background-image: url(https://github.com/Lee-Jihyuwe/Hina.github.io/blob/main/159Z_2107.w026.n002.628B.p1.628.jpg);
   background-size: cover;
-  color: none;
+  color: white;
   text-align: center;
 }
 
